css/main.css
@media all {
    body {font: 400 14px/1.3 'Roboto', sans-serif; color: #000;}
    .container {width: 1000px; margin: 0 auto;}
}

@media screen {

    /* General */
    .image {background-position: top center; background-repeat: no-repeat; background-size: cover;}
    a {text-decoration: none;}
    a:focus {outline: 2px dotted #000; outline-offset: 5px;}
    
    /* Masthead */ 
    header {background-image: url(../layout2-assets/hero-image-greece.webp); min-height: 527px; position: relative; left: 0}
    #logo {background-image: url(../layout2-assets/go-greek-tours.png); min-height: 92px; width: 107px; position: absolute; left: 10px; top: 10px;}
    #logo:focus {border-color: #fff;}
    header h1 {font: 40px/1.3 'Roboto Slab', serif; color: #00214f; margin: 0 auto; position: relative; top: 320px; width: 90%; text-align: center;}
    header form {position: relative; top: 330px; width: 100%; display: flex; justify-content: center;}
    #searchField, #searchButton {font: 16px/1.3 'Roboto Slab', serif; border-radius: 0; border: 0; height: 40px;}
    #searchField {top: 10px; width: 36%; padding: 0 10px; box-sizing: border-box;}
    #searchButton {padding: 0 30px; background-color: #00214F; color: #fff;}
    #searchField:focus, #searchButton:focus {border: 2px solid #fff;}

    /* Greek History */
    .tours {display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 0 15px; padding: 80px 110px; background-color: #EDF3EF;}
    .tours section {text-align: center;}
    .tours .image {display: block; min-height: 200px;}
    #greekHistoryPhoto {background-image: url(../layout2-assets/greek-history.webp);}
    #santoriniPhoto {background-image: url(../layout2-assets/santorini.webp);}
    #monasteryPhoto {background-image: url(../layout2-assets/greek-monastery.webp);}
    .tours h2 {color: #666; font: 700 16px/1.3 'Roboto Slab', serif; margin-top: 24px;}
    .tours p {padding: 0 18px; margin: 0;}
    .tours img {margin: 15px auto;}

    /* Quote */
    .quote blockquote {color: #666; font: 700 34px/1.3 'Arima Madurai'; width: 80%; padding: 80px 0; text-align: center; margin: 0 auto;}
    .quote span {font-size: 18px;}

    /* Explore Cafe Culture */
    .exploreCafe {background-image: url(../layout2-assets/cafe-culture.webp); min-height: 543px; position: relative;}
    .exploreCafe a {background-color: #987B31; padding: 20px 0; position: absolute; top: 220px; right: 80px; text-align: center; width: 200px;}
    .exploreCafe a h2 {color: #fff; font: 400 26px/1.3 'Arima Madurai', cursive; margin: 0;}
    .exploreCafe a:hover, .exploreCafe a:focus {background-color: #000;}

    /* Travel smart */
    .travelSmart {display: grid; grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); gap: 30px 15px; background-color: #448CCB; padding: 80px 110px;}
    .travelSmart h2 {grid-column: 1 / 5; color: #fff; font: 400 34px/1.3 'Roboto Slab', serif; margin: 0;}
    .travelSmart a {padding: 40px; color: #1D6BAE; font-size: 22px; background-color: #fff; text-align: center;}

    /* Footer */
    footer {display: grid; grid-template-columns: 1.5fr 2fr 1fr; padding: 80px 110px;}
    footer h2 {color: #666; font: 400 22px/1.3 'Arima Madurai', cursive; margin: 0 0 0.5em;}
    footer ul {list-style-type: none; padding: 0; margin: 0;}
    footer li {margin-bottom: 1em;}
    footer ul a {color: #666;}
    footer ul a:hover, footer ul a:focus {color: #000;}
    footer input[type*="email"] {border: 1px solid #000; padding: 5px; width: 96.5%;}
    footer input[type*="email"]:focus {border: 2px solid #000;}
    footer input[type*="submit"] {color: #fff; background-color: #448CCB; padding: 5px 15px; cursor: pointer; margin-top: 13px; border: 1px solid black;}
    footer input[type*="submit"]:hover, footer input[type*="submit"]:focus {background-color: #000;}
    footer aside {text-align: right; display: grid; justify-content: right; grid-template-rows: repeat(2, 1fr); gap: 20px 0;}
    footer aside a {background-image: url(../layout2-assets/twitter-logo.png); max-height: 50px; display: block; width: 60px; justify-self: end; margin: 0;} 
    footer aside p {margin: 0;}
}

@media screen and (max-width: 1010px) {

    .container {width: 100%;}
    .tours, .travelSmart, footer {padding-left: 50px; padding-right: 50px;}
    .travelSmart {padding-bottom: 75px;}
    .travelSmart {grid-template-columns: repeat(2, 1fr); grid-template-rows: auto repeat(2, 1fr); gap: 22px 30px;}
    .travelSmart h2 {grid-column: 1/3; margin-bottom: 3px;}
    .travelSmart a {padding-left: 0; padding-right: 0;}

}

@media screen and (max-width: 800px) {

    .tours, .travelSmart, footer {padding-left: 46px; padding-right: 46px;}
    .tours {row-gap: 15px;}
    footer {grid-template-columns: 1fr; grid-template-rows: repeat(3, 1fr); gap: 40px 0;}
    footer input[type*="email"] {width: 98%;}
    footer aside {justify-content: left; margin-top: -9px; gap: 12px 0;}
    footer aside a {justify-self: left;}

}

@media screen and (max-width: 600px) {

    header input {width: 63%;}
    .tours, .travelSmart, footer {padding-top: 50px; padding-bottom: 50px;}
    .exploreCafe {display: grid; grid-template-rows: auto; justify-content: center; align-content: center;}
    .exploreCafe a {position: static;}
    .travelSmart {grid-template-columns: 1fr; grid-template-rows: auto repeat(4, 1fr); padding-bottom: 45px;}
    .travelSmart h2 {grid-column: 1 / 2;}

}

@media print {
    h1, input, button, img, .greekToursNav, .mailList {display: none;}

    body {font-size: 17pt;}
    h2 {font-size: 24pt;}
    a {color: #000; text-decoration: underline;}
    .travelSmart a:nth-child(n) {display: block; margin-bottom: 20pt;}
}

